adding lab 1 files

--- a/labs/lab1/about.html
+++ b/labs/lab1/about.html
@@ -66,10 +66,10 @@ in html
                </table>
                
                <ul>
-                   <li>Video Games: I own four consoles and like all kinds of games but my favorite is The Legend of Zelda</li>
-                   <li>Soccer: I am part of a team and we play every Saturday. I'm the goalie</li>
-                   <li>Music: I love all kinds of music, but my favorite is R&B and pop</li>
-                   <li>Programming: I spend at least 2 hours a day every day using and learning programming languages</li>
+                   <li><span class="hobby">Video Games</span>: I own four consoles and like all kinds of games but my favorite is The Legend of Zelda</li>
+                   <li><span class="hobby">Soccer</span>: I am part of a team and we play every Saturday. I'm the goalie</li>
+                   <li><span class="hobby">Music</span>: I love all kinds of music, but my favorite is R&B and pop</li>
+                   <li><span class="hobby">Programming</span>: I spend at least 2 hours a day every day using and learning programming languages</li>
                </ul>
            </div>
             
