updated buddy badge

--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -67,6 +67,7 @@ in html
             <strong>Disclaimer:</strong> The information in this webpage is fictitious.<br />
             It is used for academic purposes only. <br /><br />
             <img src="img/csumb.png" width="100" />
+            <img src="img/buddy_verified.png" width="100" />
             
         </footer>
         <!-- closing footer -->
