updating hw1 files

--- a/hw/hw1/index.html
+++ b/hw/hw1/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+    
+    <!--Tags not used in lab: details, code, text-shadow, -->
 
     <head>
         <meta charset="utf-8"/>
