--- a/hw/hw1/index.html
+++ b/hw/hw1/index.html
@@ -76,9 +76,9 @@
             <hr>
             CST 336. 2019&copy;Justin Schroeder - CST 336 Internet Programming<br />
             <strong>Disclaimer:</strong> The information in this webpage is fictitious.<br />
-            It is used for academic purposes only. <br /><br />
-            <img src="img/csumb.png" alt = " " width="100" />
-            <img src="img/buddy_verified.png" alt =" " width="100" />
+            It is used for academic purposes only. <br />
+            <img class="logo" src="img/csumb.png" alt = "csumb logo" />
+            <img class="logo" src="img/buddy_verified.png" alt ="buddy" />
             
         </footer>
         
