--- a/labs/lab3/index.html
+++ b/labs/lab3/index.html
@@ -129,6 +129,7 @@
             //When the Submit Button is clicked
             
             $("#submitButton").click(function(){
+                $("#prevScores").html("");
                 total_points = 0;
               // alert($("#q1").val());
               //alert($("input[name=q3]:checked").val());
