--- a/labs/lab4/index.html
+++ b/labs/lab4/index.html
@@ -140,6 +140,8 @@
         Type Password Again: <input id = "pass2" type="password"><span id = "passerror"></span><br><br>
         <input id="Button" type="submit" value="Sign up!">
         <br><br>
+        <img src="img/buddy_verified.png" width="150">
+        
     </fieldset>
 
 </div>
