--- a/practice/p5/index.html
+++ b/practice/p5/index.html
@@ -12,7 +12,7 @@
 
   <!--Embed here any YouTube video using the "iframe" tag -->
 <div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/emXKUzofpFw" allowfullscreen>
+<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/emXKUzofpFw">
 </iframe>
 </div>
 <br>
