--- a/labs/lab6/index.html
+++ b/labs/lab6/index.html
@@ -151,7 +151,11 @@
             </div>
         </div>
     </div>
-
+    
+    <br><br>
+    <center>
+        <img src="img/buddy_verified.png" width="100">
+    </center>
 </body>
 
 </html>
