--- a/hw/hw3/index.html
+++ b/hw/hw3/index.html
@@ -131,7 +131,12 @@
 
         <span id="result"></span>
 
+        
     </div>
+    
+    <center>
+            <img src="img/buddy_verified.png" width="100">
+        </center>
 
 </body>
 
