--- a/practice/midtermPractice/index.html
+++ b/practice/midtermPractice/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <script>
         /* global $ */
@@ -18,6 +20,7 @@
         let userGuess;
         let exp;
         let selectedProduct;
+        let randomProduct;
         $(document).ready(function() {
             $("#qty").attr("value", "1");
             $.ajax({
@@ -30,22 +33,24 @@
                     //alert(data.productName);
 
                     data.forEach(function(product) {
-                        $("#product").html("<a href='#' id = '" + product.productName + "'>" + product.productName + "</a>");
+                        $("#product").html("<a href='#' class = 'historyLink' id = '" + product.productName + "'>" + product.productName + "</a>");
                         price = product.productPrice;
                         qty = $("#qty").val();
                         subtotal = price * qty;
                         tax = subtotal * .10;
                         total = subtotal + tax;
-
+                        randomProduct = product.productId;
                         $("#price").html("$" + price);
                         $("#subtotal").html("$" + subtotal);
                         $("#tax").html("$" + tax);
                         $("#total").html("$" + total);
+                        $("#total1").html("$" + price);
                     });
                 }
 
             }); //ajax
 
+            //Makes the dropdown
             $.ajax({
                 type: "GET",
                 url: "api/getProduct.php",
@@ -57,7 +62,38 @@
                 }
             }); //ajax
 
+            //Display product that is selected
+            $("#products").on("change", function() {
+                $.ajax({
+                    type: "GET",
+                    url: "api/getProduct.php",
+                    dataType: "json",
+                    success: function(data, status) {
+                        //alert($("#products").val());
+                        data.forEach(function(key) {
+                            //$("#products").append("<option value=" + key.productId + ">" + key.productName + "</option>");
+                            if ($("#products").val() == key.productId) {
+                                $("#product").html("<a href='#' class = 'historyLink' id = '" + key.productId + "'>" + key.productName + "</a>");
+                                price = key.productPrice;
+                                qty = $("#qty").val();
+                                subtotal = price * qty;
+                                tax = subtotal * .10;
+                                total = subtotal + tax;
 
+                                $("#price").html("$" + price);
+                                $("#subtotal").html("$" + subtotal);
+                                $("#tax").html("$" + tax);
+                                $("#total").html("$" + total);
+                                $("#total1").html("$" + price);
+                            }
+                            //alert(key[$("#products").val()]['productName']);
+                        });
+
+                    }
+                }); //ajax
+            });
+
+            //updates the financial info
             $("#qty").on("change", function() {
                 qty = $("#qty").val();
                 subtotal = price * qty;
@@ -68,6 +104,7 @@
                 $("#total").html("$" + total);
             });
 
+            //displays the promo code info and applies 
             $("#guess").on("change", function() {
                 $.ajax({
                     type: "GET",
@@ -106,7 +143,37 @@
                 }); //ajax
             }); //guess
 
+
         }); //ready
+
+        $(document).on("click", ".historyLink", function() {
+            $("#purchaseHistoryModal").modal("show");
+            $.ajax({
+                type: "GET",
+                url: "api/getProduct.php",
+                dataType: "json",
+                //data: { "productId": $(this).attr("id") },
+                success: function(data, status) {
+                    //alert(randomProduct)
+                    data.some(function(key) {
+                        if ($("#products").val() == key.productId) {
+                            $("#history").html("");
+                            $("#history").append(key.productName + "<br />");
+                            $("#history").append("<img src = '" + key.productImage + "'width = '200' /> <br />");
+                            $("#history").append("Unit Price: " + key.productPrice + "<br />");
+                            return true;
+                        }
+                        else if(randomProduct == key.productId){
+                            $("#history").html("");
+                            $("#history").append(key.productName + "<br />");
+                            $("#history").append("<img src = '" + key.productImage + "'width = '200' /> <br />");
+                            $("#history").append("Unit Price: " + key.productPrice + "<br />");
+                            return true;
+                        }
+                    });
+                }
+            }); //ajax
+        });
     </script>
 
 </head>
@@ -127,7 +194,7 @@
             <td name="product" id="product"></td>
             <td id="price"></td>
             <td><input type="number" id="qty"></td>
-            <td></td>
+            <td id="total1"></td>
 
         </tr>
 
@@ -173,6 +240,28 @@
         <br><br> Promo Code: <input type "text" id="guess" name="guess"><br><br>
         <span id="expirationDate"></span>
     </center>
+
+    <div class="modal" tabindex="-1" role="dialog" id="purchaseHistoryModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Product History</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden = "true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        <div id="history"></div>
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
