--- a/labs/lab8/index.html
+++ b/labs/lab8/index.html
@@ -3,18 +3,9 @@
     <head>
         <title> Pixabay API Demo </title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <style>
-            body {
-            text-align: center;
-            }
-            img {
-                border-radius: 20px;
-                padding:15px;
-            }
-            .favorite{
-                cursor: pointer;
-            }
-        </style>
+
+        
+        <link rel="stylesheet" href="css/styles.css">      
         <script>
             function searchImage() {
                 $("#images").html("Loading...");
